# wasmpack-example

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  build.rs
examples/mrubyedge-example/: index.html  package-lock.json  package.json  vite.config.js
examples/mrubyedge-example/src/: fib.js  main.js
src/: lib.rs
src/mruby/: fib.rb
